...
        android:textAlignment="center"
        android:textColor="@color/colorText"
        android:textSize="30sp"
        android:textStyle="bold" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/appCompatButton_play"
        android:layout_width="250dp"
        android:layout_height="70dp"
        android:layout_marginTop="18dp"
        android:background="@color/colorTextHint"
        android:elevation="0dp"
        android:text="Play"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp"
        android:layout_below="@+id/text_welcome"
        android:layout_centerHorizontal="true" />

...
        android:textAlignment="viewStart"
        android:textColor="@color/colorText"
        android:textSize="21sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/text_valueStatistics"
        android:layout_width="wrap_content"
        android:layout_height="290dp"
        android:layout_alignBaseline="@+id/text_labelsStatistics"
        android:layout_alignBottom="@+id/text_labelsStatistics"
        android:layout_alignEnd="@+id/text_welcome"
        android:layout_marginEnd="45dp"
...
        android:textAlignment="viewEnd"
        android:textColor="@color/colorText"
        android:textSize="21sp"
        android:textStyle="bold" />

    <ImageButton
        android:id="@+id/imageButtonForSettings"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_alignBottom="@+id/text_welcome"
        android:layout_toEndOf="@+id/appCompatButton_play"
        android:background="@android:color/transparent"
        app:srcCompat="@drawable/wrench512" />
...
