...
        android:layout_marginTop="32dp"
        android:gravity="center_vertical|center_horizontal"
        android:orientation="vertical"
        android:layout_alignParentEnd="true">

        <Button
            android:id="@+id/btn_dialog_ok"
            android:layout_width="wrap_content"
            android:layout_height="30dp"

            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:background="@color/colorTextHint"
            android:gravity="center_vertical|center_horizontal"
            android:text="BUY"
            android:textColor="#ffffffff" />

        <Button
            android:id="@+id/cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
...
